--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -150,16 +150,25 @@ on post-fs
     mkdir /data/misc/vpn 0770 system system
     mkdir /data/misc/systemkeys 0700 system system
     mkdir /data/misc/vpn/profiles 0770 system system
-    # give system access to wpa_supplicant.conf for backup and restore
-    mkdir /data/misc/wifi 0770 wifi wifi
-    chmod 0770 /data/misc/wifi
-    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
     mkdir /data/local 0771 shell shell
     mkdir /data/local/tmp 0771 shell shell
     mkdir /data/data 0771 system system
     mkdir /data/app-private 0771 system system
     mkdir /data/app 0771 system system
     mkdir /data/property 0700 root root
+
+    # Create the directories used by the Wireless subsystem
+
+# atheros wlan system ++
+    mkdir /data/misc/wifi 0770 wifi system
+    mkdir /data/misc/wifi/wapi_certificate 0770 wifi system
+    chown wifi wifi /system/etc/wifi/wpa_supplicant.conf
+    chmod 0660 /system/etc/wifi/wpa_supplicant.conf
+    mkdir /data/misc/dhcp 0777 system system
+    mkdir /data/misc/wifi/sockets 0777 system system
+    mkdir /data/system 0777 system system
+    mkdir /data/system/wpa_supplicant 0777 wifi wifi
+# atheros ---
 
     # create dalvik-cache and double-check the perms
     mkdir /data/dalvik-cache 0771 system system
